--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -477,7 +477,7 @@ PRICER++.app/Contents/Info.plist:
 	@sed -e "s,@SHORT_VERSION@,1.0,g" -e "s,@TYPEINFO@,????,g" -e "s,@ICON@,,g" -e "s,@BUNDLEIDENTIFIER@,com.yourcompany.PRICER++,g" -e "s,@EXECUTABLE@,PRICER++,g" -e "s,@TYPEINFO@,????,g" ../../../Qt5.2.1/5.2.1/clang_64/mkspecs/macx-clang/Info.plist.app >PRICER++.app/Contents/Info.plist
 dist: 
 	@test -d .tmp/PRICER++1.0.0 || mkdir -p .tmp/PRICER++1.0.0
-	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/RESSOURCE.qrc .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/Genealeatoire.h ../PRICER/Mainwindow.h ../PRICER/MC.h ../PRICER/PayOff.h ../PRICER/Option.h ../PRICER/StatGatherer.h ../PRICER/Greeks.h ../PRICER/qcustomplot.h ../PRICER/Deriv.h .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/main.cpp ../PRICER/PayOff.cpp ../PRICER/Genealeatoire.cpp ../PRICER/Mainwindow.cpp ../PRICER/MC.cpp ../PRICER/Option.cpp ../PRICER/StatGatherer.cpp ../PRICER/Greeks.cpp ../PRICER/qcustomplot.cpp .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/mainwindow.ui .tmp/PRICER++1.0.0/ && (cd `dirname .tmp/PRICER++1.0.0` && $(TAR) PRICER++1.0.0.tar PRICER++1.0.0 && $(COMPRESS) PRICER++1.0.0.tar) && $(MOVE) `dirname .tmp/PRICER++1.0.0`/PRICER++1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/PRICER++1.0.0
+	$(COPY_FILE) --parents $(SOURCES) $(DIST) .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/RESSOURCE.qrc .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/Genealeatoire.h ../PRICER/Mainwindow.h ../PRICER/MC.h ../PRICER/PayOff.h ../PRICER/Option.h ../PRICER/StatGatherer.h ../PRICER/Greeks.h ../PRICER/qcustomplot.h ../PRICER/Deriv.h ../PRICER/FunVect.h .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/main.cpp ../PRICER/PayOff.cpp ../PRICER/Genealeatoire.cpp ../PRICER/Mainwindow.cpp ../PRICER/MC.cpp ../PRICER/Option.cpp ../PRICER/StatGatherer.cpp ../PRICER/Greeks.cpp ../PRICER/qcustomplot.cpp .tmp/PRICER++1.0.0/ && $(COPY_FILE) --parents ../PRICER/mainwindow.ui .tmp/PRICER++1.0.0/ && (cd `dirname .tmp/PRICER++1.0.0` && $(TAR) PRICER++1.0.0.tar PRICER++1.0.0 && $(COMPRESS) PRICER++1.0.0.tar) && $(MOVE) `dirname .tmp/PRICER++1.0.0`/PRICER++1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/PRICER++1.0.0
 
 
 clean:compiler_clean 
@@ -1091,23 +1091,26 @@ MC.o: ../PRICER/MC.cpp ../PRICER/MC.h \
 
 Option.o: ../PRICER/Option.cpp ../PRICER/Option.h \
 		../PRICER/PayOff.h \
-		../PRICER/Genealeatoire.h
+		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/QVector \
+		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/qvector.h \
+		../PRICER/Genealeatoire.h \
+		../PRICER/FunVect.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Option.o ../PRICER/Option.cpp
 
 StatGatherer.o: ../PRICER/StatGatherer.cpp ../PRICER/Option.h \
 		../PRICER/PayOff.h \
-		../PRICER/StatGatherer.h \
 		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/QVector \
 		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/qvector.h \
+		../PRICER/StatGatherer.h \
 		../PRICER/MC.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o StatGatherer.o ../PRICER/StatGatherer.cpp
 
 Greeks.o: ../PRICER/Greeks.cpp ../PRICER/Greeks.h \
 		../PRICER/Option.h \
 		../PRICER/PayOff.h \
-		../PRICER/MC.h \
 		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/QVector \
 		../../../Qt5.2.1/5.2.1/clang_64/lib/QtCore.framework/Versions/5/Headers/qvector.h \
+		../PRICER/MC.h \
 		../PRICER/Deriv.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Greeks.o ../PRICER/Greeks.cpp
 
